# seedcup-2016

./: CMakeLists.txt  README.md  clean.sh  generate_result.sh  input.txt  output.txt  package.sh  test_tool.py
common/: mem_manager.h  simplelogger.h  utility.h
doc/: README.md  example.c  grammar_spec.xlsx
doc/resource/: README.md  example.c
include/: mem_manager.h  simplelogger.h  utility.h
src/: ast.cc  ast.h  clike_ast.cc  clike_ast.h  clike_grammar.cc  clike_grammar.h  clike_interpreter.cc  clike_interpreter.cpp  clike_interpreter.h  clike_parser.cc  clike_parser.h  finite_automaton.cc  finite_automaton.h  interpreter.cc  interpreter.h  main.cc  regex_parser.cc  regex_parser.h  symbol.h  symbol_table.cpp  symbol_table.h  token.h  tokenizer.cc  tokenizer.h  variable_table.cc  variable_table.h
test/: systest.sh  test_clang.cc  test_clike_parser.cc  test_dy.cc  test_hl.cpp  test_mem_manager.cc  test_regex_parser.cc  test_tokenizer.cc  test_utility.h  tmp.txt
test/data/: control_1.txt  control_3.txt  control_4.txt  dy-debug  dy-debug.c  loop_4.txt  sample1.txt  sample4.txt  sample5.txt  sample6.txt
test/input/: control_2.txt  dy-debug.c  dy-test-2.c  dy-test-3.c  dy-test-4.c  loop_1.txt  loop_2.txt  loop_3.txt  sample1.txt  sample2.txt  sample3.txt  sample7.txt  sample8.txt
test/systest_in/: calc.c  example-test.c  fibonacci.c  level.c  loop_5.c  loop_6.c  print_tri.c  test.c
test/systest_out/: loop_5_gcc.txt  loop_5_lq.txt
